# Vypl

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.txt  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  publish.yaml
bpdb/: __init__.py  debugger.py
docs/: index.html
tests/: test_vim.py
theme/: light.theme  sample.theme  windows.theme
vypl/: __init__.py  __main__.py  _internal.py  args.py  autocomplete.py  config.py  curtsies.py  filelock.py  formatter.py  history.py  importcompletion.py  inspection.py  keys.py  lazyre.py  line.py  pager.py  paste.py  patch_linecache.py  repl.py  simpleeval.py  vim.py
vypl/curtsiesfrontend/: _internal.py  coderunner.py  events.py  filewatch.py  interaction.py  interpreter.py  manual_readline.py  parse.py  preprocess.py  repl.py  replpainter.py  sitefix.py
vypl/translations/: __init__.py
