[build-system]
requires = ["setuptools >= 62.4.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "vypl/_version.py"
fallback_version = "0.1.0"

[tool.black]
line-length = 80
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
  | doc
)/
'''
