[metadata]
name = vypl
description = A Python REPL with Vim Keybinds
license = GPL-3.0-or-later
url = https://github.com/HoraDomu/Vypl

[options]
python_requires = >=3.11
packages =
    vypl
    vypl.curtsiesfrontend
    vypl.translations
install_requires =
    curtsies >=0.4.0
    cwcwidth
    greenlet
    pygments
    pyxdg

[options.extras_require]
clipboard = pyperclip
jedi = jedi >= 0.16
watch = watchdog

[options.entry_points]
console_scripts =
    vypl = vypl.curtsies:main

[mypy]
warn_return_any = True
warn_unused_configs = True
mypy_path=stubs
files=vypl

[mypy-jedi]
ignore_missing_imports = True

[mypy-urwid]
ignore_missing_imports = True

[mypy-twisted.*]
ignore_missing_imports = True
