[metadata]
name = vypl
description = A Python REPL with Vim Keybinds
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominick Yanez
author_email = dommcpro@gmail.com
license = GPL-3.0-or-later
license_files = LICENSE
url = https://github.com/HoraDomu/Vypl
project_urls =
    Source = https://github.com/HoraDomu/Vypl
    Bug Tracker = https://github.com/HoraDomu/Vypl/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Environment :: Console
    Topic :: Software Development :: Interpreters

[options]
python_requires = >=3.11
packages =
    vypl
    vypl.curtsiesfrontend
    vypl.translations
install_requires =
    curtsies >=0.4.0
    cwcwidth
    greenlet
    pygments
    pyxdg

[options.extras_require]
clipboard = pyperclip
jedi = jedi >= 0.16
watch = watchdog

[options.entry_points]
console_scripts =
    vypl = vypl.curtsies:main

[mypy]
warn_return_any = True
warn_unused_configs = True
mypy_path=stubs
files=vypl

[mypy-jedi]
ignore_missing_imports = True

[mypy-urwid]
ignore_missing_imports = True

[mypy-twisted.*]
ignore_missing_imports = True
